Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49741

winrt: Starting/Stopping sensors can make application hang on WinRT/Windows Phone

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 RC
    • 5.6.0 Beta
    • Sensors
    • None
    • WinRT and Windows Phone 8.1
    • WinRT
    • 13fd3e9611391742b4bea86cb2f4740534daf695

    Description

      It's possible, that the functions, that add/remove the notification callbacks for changed sensor values do not return. This causes the application to hang.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            owolff Oliver Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes