winrt: Fix application hang on sensor start/stop

If addition and removal are not done in the Xaml thread, the functions
might not return at all.

Task-number: QTBUG-49741
Change-Id: Iabdea2c7ee18bf851ab70adfeb28b09781b8b609
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>